tests/query_errors/pp_embed_unrecognized_token4/error.txt
Error: 
    1 | define script snot
    2 | script
    3 |   use foo :: :; bar;
      |              ^ Found the token `:` but expected one of `<ident>`, `{`
      |                NOTE: Did you mean to use `{`?
    4 | end;
    5 | 